appId: ${APP_ID}
---
- extendedWaitUntil:
    visible: "Ex: P104"
    timeout: 50000

- tapOn: "Ex: P104"
- inputText: ${COMPANY_ID}

- tapOn: "Ex: sfa-131600"
- inputText: ${USER_NAME}

- tapOn: "Enter password"
- inputText: ${PASSWORD}

- hideKeyboard

- tapOn: "Sign In"

- extendedWaitUntil:
    visible:
      text: "Please Wait"
    timeout: 30000

- extendedWaitUntil:
    notVisible:
      text: "Please Wait"
    timeout: 150000

- swipe:
    start: 50%, 85%
    end: 50%, 20%
    duration: 700
